--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "react-bootstrap": "^2.9.1",
-    "speakeasy": "^2.0.0"
-    "react-bootstrap": "^2.9.1",
+    "speakeasy": "^2.0.0",
+    
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "util": "^0.12.5"
