--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,9 +42,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-    
   },
-  
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "keywords": [],
@@ -53,6 +51,5 @@
   "devDependencies": {
     "tailwindcss": "^3.3.5"
   },
-
   "proxy": "http://localhost:8080/"
 }
