--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.2",
+    "browserify-zlib": "^0.2.0",
     "config": "^3.3.9",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
