product api designed by danish

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 8080
+mongoURI=mongodb+srv://awaiszubair417:awais123@cluster0.volzst6.mongodb.net/?retryWrites=true&w=majority
 JWTSECRET = 2131l2k33kj2
