--- a/client/package.json
+++ b/client/package.json
@@ -57,5 +57,5 @@
   "devDependencies": {
     "tailwindcss": "^3.3.5"
   },
-  "proxy": "http://localhost:8080/"
+  "proxy": "https://e24b-103-20-133-97.ngrok-free.app/"
 }
