--- a/client/package.json
+++ b/client/package.json
@@ -57,5 +57,5 @@
   "devDependencies": {
     "tailwindcss": "^3.3.5"
   },
-  "proxy": "https://58ee-103-20-133-52.ngrok-free.app/"
+  "proxy": "http://localhost:8080/"
 }
